# BinAnalyzer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: advanced_analyzer.hpp  basic_block.hpp  cfg_analyzer.hpp  cli_parser.hpp  disassembler.hpp  file_handler.hpp  function_analyzer.hpp  hash_calculator.hpp  hex_viewer.hpp  import_analyzer.hpp  ioc_extractor.hpp  packer_detector.hpp  pe_parser.hpp  security_analyzer.hpp  shellcode_detector.hpp  string_analyzer.hpp  xref_analyzer.hpp
src/: advanced_analyzer.cpp  basic_block.cpp  cfg_analyzer.cpp  cli_parser.cpp  disassembler.cpp  file_handler.cpp  function_analyzer.cpp  hash_calculator.cpp  hex_viewer.cpp  import_analyzer.cpp  ioc_extractor.cpp  main.cpp  main_compact_full.cpp  packer_detector.cpp  pe_parser.cpp  security_analyzer.cpp  shellcode_detector.cpp  string_analyzer.cpp  xref_analyzer.cpp
